--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto
 *.zig text=auto eol=lf
+*.zig.zon text=auto eol=lf
 *.h text=auto eol=lf
 *.c text=auto eol=lf
 *.vert text=auto eol=lf
